# program-ashum9

./: .gitignore  COMPLETION_STATUS.md  DEPLOYMENT_GUIDE.md  FRONTEND_DEPLOYMENT.md  MAIN_README.md  PROJECT_DESCRIPTION.md  QUICK_REFERENCE.md  SETUP_STATUS.md  SUCCESS_STATUS.md  build.sh  synelarPitch.md
anchor_project/: Anchor.toml  README.md  metadata-example.json  package.json
anchor_project/programs/metaid_nft/: Cargo.toml
anchor_project/programs/metaid_nft/src/: lib.rs
anchor_project/tests/: metaid_nft.ts
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MetaIdMinter.tsx
frontend/src/idl/: metaid_nft.json
