[package]
name = "metaid_nft"
version = "0.1.0"
description = "MetaID NFT - One unique identity NFT per wallet"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "metaid_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = "4.1.2"
